--- a/erich/manifest.json
+++ b/erich/manifest.json
@@ -7,4 +7,13 @@
   "display": "standalone",
   "theme_color": "#2db6ad",
   "background_color": "#45bcb6"
+  "icons": [
+    {
+      "src": "android-chrome-192x192.png", "sizes": "192x192"
+    },
+    {
+      "src": "android-chrome-512x512.png", "sizes": "512x512"
+    }
+  ]
+    
 }
